# tenis

./: .gitignore  Dockerfile-backend  Dockerfile-frontend  Dockerfile-mongodb  LICENSE  README.md  README.txt  build-and-push.sh  render-envs  werf-giterminism.yaml  werf.yaml
.github/workflows/: ci-dev-2.yml  ci-dev.yml  ci-prod.yml  ci.yml  cleanup.yml  codeql.yml
.helm/: Chart.yaml  secret-values.yaml  values.yaml
.helm/templates/: backend-deployment.yaml  frontend-configmap.yaml  frontend-deployment.yaml  frontend-env-configmap.yaml  frontend-nginx-env-configmap.yaml  ingress.yaml  mongodb-configmaps.yaml  mongodb-init-script-configmap.yaml  mongodb-statefulset.yaml
backend/: README.md  build.sh  install.sh  penis-backend.service  pyproject.toml  tenis-backend.service
backend/src/penis_backend/: __main__.py  app.py
backend/src/tenis_backend/: __main__.py  alert.py  app.py  auth.py  escalation.py  json_validation.py  mongo_migrate.py  user.py
backend/src/tenis_backend/mongo_migrations/: 20240719101959_version.py  20240719102922_version.py  README.md
backend/src/tenis_backend/static/: mongo_config.json  swagger.json
frontend/: .gitignore  README.md  package.json
frontend/penis-gui/: package.json
frontend/penis-gui/public/: index.html  manifest.json
frontend/penis-gui/src/: index.jsx
frontend/public/: index.html  manifest.json
frontend/src/: index.jsx
frontend/tenis-gui/: README.md  package.json
input_plugins/Nagios/: README.txt  install.sh  tenis_nip.py
input_plugins/file/: README.txt  sample.json  tenis_input_file.py
input_plugins/nagios/: install.sh  tenis_nip.py
input_plugins/prometheus/: .gitignore  README.md  go.mod  go.sum
static-manifest/: tenis-0.1-template.yaml  tenis-0.1.yaml  tenis-0.2.yaml  tenis-0.4.yaml
tools/alertgenerator/: README.md  go.mod  go.sum
(+120 files in other folders)
