[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "penis_backend"
version = "0.0.1"
authors = [
    { name = "Valery Panov", email = "valery@ivinco.com" },
]
description = "PENIS project backend server"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Proprietary",
    "Operating System :: Linux",
]
dependencies = [
    "flask",
]
[project.urls]
Homepage = "https://github.com/Ivinco/penis/backend"

[project.scripts]
cliapp = "penis_server.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["src/penis_backend"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
exclude = [
    "__pycache__",
    ".gitignore",
    "src/.gitignore"
]
