[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenis_backend"
version = "0.0.2"
authors = [
    { name = "Valery Panov", email = "valery@ivinco.com" },
]
description = "TENIS project backend server"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "build",
    "flask",
    "flask_cors",
    "pymongo >= 4.1",
    "Werkzeug >= 2.0",
    "PyJWT >= 1.6.4",
]
[project.urls]
Homepage = "https://github.com/Ivinco/tenis/backend"

[project.scripts]
cliapp = "tenis_server.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["src/tenis_backend"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
exclude = [
    "__pycache__",
    ".gitignore",
    "src/.gitignore"
]
